WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
44388
[GTK] The Mozilla theme drawing code incorrectly renders scrollbar backgrounds
https://bugs.webkit.org/show_bug.cgi?id=44388
Summary
[GTK] The Mozilla theme drawing code incorrectly renders scrollbar backgrounds
Martin Robinson
Reported
2010-08-21 18:47:34 PDT
Instead of painting a scrolled window behind scrollbars, the theme drawing code simply paints the theme background color behind scrollbar troughs. This bug tracks both disabling that behavior and exposing a function to paint a scrolled window. This is necessary to correctly render certain GTK+ themes.
Attachments
Patch for this issue
(4.35 KB, patch)
2010-08-21 18:52 PDT
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2010-08-21 18:52:34 PDT
Created
attachment 65041
[details]
Patch for this issue
Martin Robinson
Comment 2
2010-08-23 18:25:45 PDT
Comment on
attachment 65041
[details]
Patch for this issue Clearing flags on attachment: 65041 Committed
r65851
: <
http://trac.webkit.org/changeset/65851
>
Martin Robinson
Comment 3
2010-08-23 18:25:49 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 4
2010-08-23 19:13:28 PDT
http://trac.webkit.org/changeset/65851
might have broken Chromium Mac Release The following changes are on the blame list:
http://trac.webkit.org/changeset/65851
http://trac.webkit.org/changeset/65852
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug